[gd_scene load_steps=14 format=2]

[ext_resource path="res://animation/player_animations.tres" type="SpriteFrames" id=1]
[ext_resource path="res://worlds/Player.gd" type="Script" id=2]
[ext_resource path="res://shaders_and_materials/color_swap_mat.tres" type="Material" id=4]
[ext_resource path="res://shaders_and_materials/color_swap_cycler.gd" type="Script" id=5]
[ext_resource path="res://shaders_and_materials/color_palette.gd" type="Script" id=6]
[ext_resource path="res://game_elements/dust.tscn" type="PackedScene" id=7]
[ext_resource path="res://sounds/jump_sound.ogg" type="AudioStream" id=8]
[ext_resource path="res://sounds/footstep_2.ogg" type="AudioStream" id=9]
[ext_resource path="res://sounds/fall_sound.ogg" type="AudioStream" id=10]
[ext_resource path="res://sounds/footstep_1.ogg" type="AudioStream" id=11]
[ext_resource path="res://sounds/take_damage.wav" type="AudioStream" id=12]
[ext_resource path="res://sounds/death_sound.ogg" type="AudioStream" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1.14105, 1.21797 )

[node name="Player" type="KinematicBody2D" groups=["Players", "has_feet", "moving_objects"]]
z_index = 1
collision_mask = 257
script = ExtResource( 2 )
foot_step = ExtResource( 7 )

[node name="PhysicsShape" type="CollisionShape2D" parent="."]
position = Vector2( 0.75, 0.75 )
scale = Vector2( 2, 5.9 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." groups=["moving_objects"]]
material = ExtResource( 4 )
frames = ExtResource( 1 )
playing = true

[node name="color_swapper" type="Node2D" parent="."]
script = ExtResource( 5 )
sprite_path = NodePath("../AnimatedSprite")

[node name="palettes" type="Node2D" parent="color_swapper"]

[node name="grayscale_def" type="Node2D" parent="color_swapper/palettes"]
script = ExtResource( 6 )

[node name="inverted_grayscale" type="Node2D" parent="color_swapper/palettes"]
script = ExtResource( 6 )
colors = [ Color( 1, 1, 1, 1 ), Color( 0.901961, 0.901961, 0.901961, 1 ), Color( 0.8, 0.8, 0.8, 1 ), Color( 0.7, 0.7, 0.7, 1 ), Color( 0.6, 0.6, 0.6, 1 ), Color( 0.501961, 0.501961, 0.501961, 1 ), Color( 0.4, 0.4, 0.4, 1 ), Color( 0.301961, 0.301961, 0.301961, 1 ), Color( 0.2, 0.2, 0.2, 1 ), Color( 0.101961, 0.101961, 0.101961, 1 ), Color( 0, 0, 0, 1 ) ]

[node name="Tween" type="Tween" parent="color_swapper"]

[node name="sounds" type="Node2D" parent="."]

[node name="jump_sound" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource( 8 )
bus = "Effects"

[node name="land_sound" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource( 10 )
bus = "Effects"

[node name="footstep_sound_1" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource( 11 )
volume_db = -5.0
bus = "Effects"

[node name="footstep_sound_2" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource( 9 )
volume_db = -5.0
bus = "Effects"

[node name="death_sound" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource( 13 )
bus = "Effects"

[node name="take_damage" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource( 12 )
volume_db = -10.0
bus = "Effects"

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -0.397297, 6.09192 )
enabled = true
cast_to = Vector2( 0, 12 )
collision_mask = 2147484160

[connection signal="tween_completed" from="color_swapper/Tween" to="color_swapper" method="_on_Tween_tween_completed"]
[connection signal="tween_step" from="color_swapper/Tween" to="color_swapper" method="_on_Tween_tween_step"]
